--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.4",
     "mysql2": "^3.13.0",
     "nodemon": "^3.1.9",
     "onnxruntime-node": "^1.21.0",
-    "tar": "^6.1.11"
+    "tar": "^6.1.11",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "node server.js",
