--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-mysql-session": "^3.0.3",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
@@ -20,7 +21,8 @@
     "nodemon": "^3.1.9",
     "onnxruntime-node": "^1.21.0",
     "tar": "^6.1.11",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "scripts": {
     "start": "node server.js",
