--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "server.js",
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
+    "bcrypt": "1.0",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-mysql-session": "^3.0.3",
     "express-rate-limit": "^7.5.0",
+    "express-session": "1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "moment": "^2.30.1",
@@ -18,6 +21,8 @@
     "mysql2": "^3.13.0",
     "nodemon": "^3.1.9",
     "onnxruntime-node": "^1.21.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "tar": "^6.1.11",
     "uuid": "^11.1.0",
     "winston": "^3.0.0"
